changed fileserver scope to =

--- a/template.html
+++ b/template.html
@@ -11,7 +11,7 @@
   <div class='preview markdown' ng-bind-html-unsafe='data|markdown'></div>
 
   <div ng-show='show_file_manager' class='file-manager-overlay'>
-    <file-manager url='{{fileserver}}' selected='selected_files'></file-manager>
+    <file-manager url='fileserver' selected='selected_files'></file-manager>
     <div class='actions'>
       <button ng-click='insertImage()' ng-disabled='!selected_files.length'>Insert As Image</button>
       <button ng-click='insertLink()' ng-disabled='!selected_files.length'>Insert As Link</button>
