--- a/example/index.html
+++ b/example/index.html
@@ -7,8 +7,7 @@
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.0.1/angular.min.js'></script>
     <script src='build.js'></script>
     <script>
-      require('angular-markdown-editor');
-      var module = angular.module('my-app', ['markdown-editor']);
+      var module = angular.module('my-app', [ require('angular-markdown-editor') ]);
 
       module.controller('Ctrl', function ($scope) {
         $scope.data = '# This is a title\n\n ## This is a sub-title';
